# realty-backend

./: .dockerignore  .gitignore  .gitignore_backend  Dockerfile  README.md  alembic.ini  create_tables.py  doc.sh  docker-compose-env  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  up  uvicorn_config.toml
alembic/: README.md  __init__.py  env.py
alembic/versions/: 08ad04c7e791_add_rent_column_to_leases_table.py  0b68bad72e35_add_columns_to_units_table.py  0e2c4df2ad81_update_properties_make_city_state_zip_.py  179b091dbc20_add_columns_to_buildings_table.py  2183f12175fd_add_policy_type_to_insurances_table.py  2c05bfddd261_add_category_model_and_update_item_model.py  3731b92508f0_add_owner_id_column_to_resource_tables.py  37bb5e7b0277_add_general_metadata_fields_to_tables.py  45af6cfd4fa9_update_floor_number_column_in_units_.py  4b676f159137_remove_unit_count_column_from_buildings_.py  6bdd310871a0_initial_migration.py  836ee014d057_update_properties_table_remove_manager_.py  a6021bc40686_add_new_columns_to_insurances_table.py  a9619b65924a_initial_migration.py  aa824db960da_initial_migration.py  b5b99aba90fc_add_index_to_foreign_key_of_resource_.py  (+7 more)
app/: __init__.py  auth.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  utils.py
app/api/: __init__.py  (+2 more)
config/: README.md
envs/: .env.development.example  .env.development_template  .env.example  .env.production.example  .env.production_template  .env.testing.example  .env.testing_template  .env_template
scripts/: activate  activate.sh  clear_cache  clear_cache.py  cli_reference.md  create_tables  create_tables.py  dev_migrate  dev_migrate.sh  dev_run  dev_run.sh  generate_mockdata.py  generate_secret_key.py  load_mockdata  load_mockdata_sqlalchemy.py  migrate  migrate.sh  pip_upgrade.sh  pipi  pipi.sh  test
tests/: test_config.py  test_crud.py  test_env.py
(+59 files in other folders)
