[project]
name = "realty-backend"
version = "0.1.0"
description = "Realty and property management for professionals."
authors = [
    {name = "Dan Harcsztark",email = "85728+dnstock@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "alembic (>=1.14.1,<2.0.0)",
    "annotated-types (>=0.7.0,<0.8.0)",
    "anyio (>=4.8.0,<5.0.0)",
    "bcrypt (>=4.2.1,<5.0.0)",
    "certifi (>=2024.12.14,<2025.0.0)",
    "dnspython (>=2.7.0,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "ecdsa (>=0.19.0,<0.20.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "h11 (>=0.14.0,<0.15.0)",
    "httpcore (>=1.0.7,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "idna (>=3.10,<4.0)",
    "iniconfig (>=2.0.0,<3.0.0)",
    "mako (>=1.3.8,<2.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "packaging (>=24.2,<25.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pluggy (>=1.5.0,<2.0.0)",
    "psutil (>=6.1.1,<7.0.0)",
    "psycopg (>=3.2.4,<4.0.0)",
    "pyasn1 (>=0.6.1,<0.7.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "pydantic-core (>=2.27.2,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "python-jose (>=3.3.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pytz (>=2024.2,<2025.0)",
    "rsa (>=4.9,<5.0)",
    "six (>=1.17.0,<2.0.0)",
    "sniffio (>=1.3.1,<2.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
    "tzdata (>=2025.1,<2026.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.3"
faker = "^34.0.0"
pytest = "^8.3.4"
pytest-env = "^1.1.5"
